Add options to enable FolderPluginLoader and Imcompatible API Plugin

--- a/src/pocketmine/resources/genisys_chs.yml
+++ b/src/pocketmine/resources/genisys_chs.yml
@@ -1,8 +1,20 @@
+#
+#   _____            _               _____           
+#  / ____|          (_)             |  __ \          
+# | |  __  ___ _ __  _ ___ _   _ ___| |__) | __ ___  
+# | | |_ |/ _ \ '_ \| / __| | | / __|  ___/ '__/ _ \ 
+# | |__| |  __/ | | | \__ \ |_| \__ \ |   | | | (_) |
+#  \_____|\___|_| |_|_|___/\__, |___/_|   |_|  \___/ 
+#                          __/ |                    
+#                         |___/                     
+#
+#
+#
 #Genisys高级配置文件
 
 #配置文件版本
 config:
- version: 25
+ version: 26
  
 level:
  #设置是否变换天气
@@ -31,6 +43,14 @@ player:
  #如果玩家进入游戏时崩溃, 请设置低于10的值. 禁用 = -1
  chunk-radius: -1
  
+developer:
+  #是否允许服务器加载文件夹插件(源码)
+  #建议关闭
+  folder-plugin-loader: true
+  #是否允许服务器加载不兼容的API插件
+  #建议关闭
+  load-incompatible-api: true
+
 nether:
  #是否允许地狱，打开此选项会自动生成地狱地图
  allow-nether: true
