--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "src/spl"]
 	path = src/spl
 	url = https://github.com/pmmp/PocketMine-SPL.git
+[submodule "ci/plugins/PocketMine-DevTools"]
+	path = ci/plugins/PocketMine-DevTools
+	url = https://github.com/GenisysPro/PocketMine-DevTools.git
+[submodule "ci/plugins/BetaTester"]
+	path = ci/plugins/BetaTester
+	url = https://github.com/GenisysPro/BetaTester.git
