--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,7 @@ phar:
    - sed -i "s/const VERSION \?= \?\"\(.*\)\"/const VERSION = \"\1$([ ${CI_BUILD_REF_NAME} != master ] && echo unsupported-)${CI_BUILD_REF:0:7}\"/" src/pocketmine/PocketMine.php
    - sed -i "/GIT_COMMIT/s/0000000000000000000000000000000000000000/${CI_BUILD_REF}/" src/pocketmine/PocketMine.php
    - ./ci/run.sh
-   - mv plugins/DevTools/Genisys*.phar .
+   - mv plugins/GenisysPro/GenisysPro*.phar .
   artifacts:
     paths:
-     - Genisys*.phar
-
+     - GenisysPro*.phar
