Now allow changing timings host, added new host timings.pmmp.io

--- a/src/pocketmine/resources/pocketmine.yml
+++ b/src/pocketmine/resources/pocketmine.yml
@@ -185,7 +185,7 @@ commands:
 
 timings:
  #Choose the host to use for viewing your timings results.
- host: mcpetimings.com
+ host: timings.pmmp.io
 
 aliases:
  #Examples:
