--- a/src/pocketmine/resources/genisys_chs.yml
+++ b/src/pocketmine/resources/genisys_chs.yml
@@ -14,7 +14,7 @@
 
 #配置文件版本
 config:
- version: 26
+ version: 27
  
 level:
  #设置是否变换天气
@@ -84,6 +84,8 @@ server:
  advanced-command-selector: false
  #是否加载ResourcePackManager
  enable-resource: false
+ #This parameter turns on or off the absorption of water by a sponge //TODO: Translation for other languages
+ absorb-water: false
 
 enchantment:
  #是否允许使用铁砧
