--- a/src/pocketmine/resources/genisys_eng.yml
+++ b/src/pocketmine/resources/genisys_eng.yml
@@ -14,7 +14,7 @@
 
 #Version of this file
 config:
- version: 26
+ version: 27
 
 level:
  #Set if weather is enabled (rain may cause lag to older devices)
@@ -77,6 +77,8 @@ server:
  advanced-command-selector: false
  #Set if enable ResourcePackManager
  enable-resource: false
+ #This parameter turns on or off the absorption of water by a sponge
+ absorb-water: false
 
 enchantment:
  #Choose if anvils are enabled
