--- a/src/pocketmine/resources/genisys_jpn.yml
+++ b/src/pocketmine/resources/genisys_jpn.yml
@@ -14,7 +14,7 @@
 
 #ファイルのバージョン
 config:
- version: 26
+ version: 27
 
 level:
  #有効にすると天気を設定します（雨が降ると古い端末の動作が遅くなる場合があります）
@@ -77,6 +77,8 @@ server:
  advanced-command-selector: false
  #有効にするとResourcePackManagerを設定します
  enable-resource: false
+ #This parameter turns on or off the absorption of water by a sponge //TODO: Translation for other languages
+ absorb-water: false
 
 enchantment:
  #有効にすると金床を許可します
