--- a/src/pocketmine/resources/genisys_chs.yml
+++ b/src/pocketmine/resources/genisys_chs.yml
@@ -14,7 +14,7 @@
 
 #配置文件版本
 config:
- version: 27
+ version: 28
  
 level:
  #设置是否变换天气
@@ -56,6 +56,10 @@ nether:
  allow-nether: true
  #地狱地图名
  level-name: "nether"
+
+ender:
+ allow-ender: true
+ level-name: "ender"
  
 server:
  #是否允许生成铁傀儡
