--- a/src/pocketmine/resources/genisys_zho.yml
+++ b/src/pocketmine/resources/genisys_zho.yml
@@ -14,7 +14,7 @@
 
 #配置檔案版本
 config:
- version: 27
+ version: 28
  
 level:
  #設定是否變換天氣
@@ -56,6 +56,10 @@ nether:
  allow-nether: true
  #地獄地圖名
  level-name: "nether"
+
+ender:
+ allow-ender: true
+ level-name: "ender"
  
 server:
  #是否允許生成鐵傀儡
