--- a/src/pocketmine/resources/genisys_chs.yml
+++ b/src/pocketmine/resources/genisys_chs.yml
@@ -78,10 +78,8 @@ server:
  player-msg-type: 0
  login-msg: "§3@player 加入了游戏"
  logout-msg: "§3@player 退出了游戏"
- #是否进行移动检测(不再拉回了)
- check-movement: true
  #是否限制创造某些功能(禁止丢物品, 禁止操作箱子等等)
- limited-creative: true
+ limited-creative: false
  #是否开启方块破坏粒子
  destroy-block-particle: true
  #是否允许喷溅型药水
