--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,21 @@ sudo: false
 
 language: php
 php:
- - 7.0
+ - 7.2
 
 before_script:
  - phpenv config-rm xdebug.ini
- - pecl install channel://pecl.php.net/pthreads-3.1.6
+# - pecl install channel://pecl.php.net/pthreads-3.1.6
  - pecl install channel://pecl.php.net/weakref-0.3.3
- - echo | pecl install channel://pecl.php.net/yaml-2.0.0
+ - echo | pecl install channel://pecl.php.net/yaml-2.0.2
+ - git clone https://github.com/krakjoe/pthreads.git --depth=1
+ - cd pthreads
+ - phpize
+ - ./configure
+ - make
+ - make install
+ - cd ..
+ - echo "extension=pthreads.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 script:
  - ./ci/run.sh
