--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
  - 7.2
 
 before_script:
- - phpenv config-rm xdebug.ini
+# - phpenv config-rm xdebug.ini
 # - pecl install channel://pecl.php.net/pthreads-3.1.6
  - pecl install channel://pecl.php.net/weakref-0.3.3
  - echo | pecl install channel://pecl.php.net/yaml-2.0.2
