Update genisys_jpn.yml (#1093)

--- a/src/pocketmine/resources/genisys_jpn.yml
+++ b/src/pocketmine/resources/genisys_jpn.yml
@@ -12,6 +12,10 @@
 #
 #GenisysPro 詳細設定ファイル
 
+#true:有効
+#false:無効
+#1秒:20tick
+
 #ファイルのバージョン
 config:
  version: 28
@@ -19,12 +23,12 @@ config:
 level:
  #有効にすると、天候要素が加わります（雨が降ると古い端末の動作が遅くなる場合があります）
  weather: true
- #天気が変わる時間の間隔
+ #天候が変わる時間の間隔(min:最小値 max:最大値)
  weather-random-duration-min: 6000
  weather-random-duration-max: 12000
  #落雷が発生する間隔（初期値は10秒、0秒にすると無効になります)
  lightning-time: 200
- #有効にすると落雷した場所が火災します
+ #有効にすると落雷した場所で火災が発生します
  lightning-fire: false
  #有効にすると炎が延焼します（木など）
  fire-spread: false
@@ -34,11 +38,11 @@ player:
  hunger: true
  #有効にすると経験値要素が機能します
  experience: true
- #有効にするとプレイヤーが死亡してもインベントリ(プレイヤーの持っている、ブロックやアイテム)を維持します
+ #有効にするとプレイヤーが倒れてもインベントリ(プレイヤーの持っている、ブロックやアイテム)を維持します
  keep-inventory: false
  #有効にするとプレイヤーがゲームモードを変更したときにインベントリを消去します
  auto-clear-inventory : true
- #有効にするとプレイヤーが死亡しても経験値を維持します
+ #有効にするとプレイヤーが倒れても経験値を維持します
  keep-experience: false
 
 developer:
@@ -66,7 +70,7 @@ server:
  allow-iron-golem: false
  #有効にするとスノーゴーレムのスポーンを許可します
  allow-snow-golem: false
- #有効にするとserver.logを生成しません
+ #有効にするとserver.logファイルにログ内容を保存しません
  disable-log: false
  #プレイヤーが参加または退出したときにお知らせする方法
  #0 = Message, 1 = Tip, 2 = Popup
@@ -77,30 +81,30 @@ server:
  limited-creative: false
  #有効にするとブロックを破壊したときにパーティクルを表示します
  destroy-block-particle: true
- #有効にするとスプラッシュポーションを許可します
+ #有効にするとスプラッシュポーションが使用可能になります
  allow-splash-potion: true
- #有効にすると高度なコマンドセレクタを設定します
+ #有効にすると高度なコマンドセレクタが使用可能になります
  advanced-command-selector: false
- #有効にするとResourcePackManagerを設定します
+ #有効にするとResourcePackManagerが使用可能になります
  enable-resource: false
- #この設定はスポンジブロックによる水の吸収機能を 有効 または 無効 の設定ができます。
+ #スポンジブロックによる水の吸収機能の使用を設定できます
  absorb-water: false
 
 enchantment:
- #有効にすると金床の使用を許可します
+ #有効にすると金床が使用可能になります
  enable-anvil: true
- #有効にするとエンチャントテーブルの使用を許可します
+ #有効にするとエンチャントテーブルが使用可能になります
  enable-enchanting-table: true
- #有効にすると本棚を数えます（有効にするとサーバーの動作が遅くなる場合があります）
- #無効にすると0~15の間でランダムに数えます
+ #有効にすると周りの本棚を数えます（有効にするとサーバーの動作が遅くなる場合があります）
+ #無効にすると本棚の数を0~15の間でランダムに決めます
  count-bookshelf: false
 
 redstone:
- ###################################################
- #####有効にするとレッドストーンの動作を許可します######
- ###################################################
- ###無効にするとレッドストーンシステムは動作しません###
- ##################################################
+ ##############################################
+ ####有効にするとレッドストーンが動作します####
+ ##############################################
+ ###無効にするとレッドストーンが動作しません###
+ ##############################################
  enable: false
  #有効にすると周波数パルスを設定します
  frequency-pulse: false
@@ -124,15 +128,15 @@ dserver:
  query-all-players: false
  #有効にするとMOTDにプレイヤーのオンライン人数を表示します
  motd-players: false
- #有効にするとクエリーににプレイヤーのオンライン人数を表示します
+ #有効にするとクエリーにプレイヤーのオンライン人数を表示します
  query-players: false
  #更新する間隔（20で1秒）
  time: 40
  #失敗したときに再試行する間隔
  retry-times: 3
- #サーバーリスト（「;」で区切ることができます、例：1.example.com:19132;2.example.com:19133）
+ #サーバーリスト(「;」で区切ることができます、例：1.example.com:19132;2.example.com:19133)
  server-list: ""
 
 inventory:
- #金床に問題がある場合は無効にするとチートの検証をせずにインベントリを処理します
+ #金床に問題がある場合は無効にすると、チートの検証をせずにインベントリを処理します
  allow-cheats: false
